[project]
name = "rm-uring-py"
version = "0.1.0"
description = ""
authors = [
    {name = "jnt87",email = "jnthomas8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "liburing (>=2024.5.3,<2025.0.0)"
]

[tool.poetry]
packages = [{include = "rm_uring_py", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
